# ensembl-anno

./: .buildinfo  .gitignore  .pylintrc  .python-version  .travis.yml  NOTICE  README.md  _index.html  busco_missing_root_cause_breakdown.tsv  busco_triage.py  busco_triage_report.md  cmsearch.html  config.json  cpg.html  dust.html  ensembl-anno.py  ensembl_anno.py  ensembl_anno_old.py  eponine.html  finalisation_utils.py  genblast.html  genindex.html  index.html  install.html  legacy_finalisation.py  legacy_load_to_ensembl_db.py  license.html  minimap.html  missing_buscos_present_in_helixer.tsv  note_softwares  objects.inv  pipeline.nf  protein_utils.py  py-modindex.html  pylintrc  pyproject.toml  red.html  repeatmasker.html  repeatmasking_utils.py  scallop.html  (+13 more)
.doctrees/: environment.pickle  genblast.doctree  minimap.doctree  star.doctree
.github/actions/python_build/: action.yml
.github/workflows/: ci.yml  documentation.yaml  notice.yml  python_ci.yml
_modules/: index.html
_modules/ensembl/tools/anno/protein_annotation/: genblast.html
_modules/ensembl/tools/anno/repeat_annotation/: dust.html  red.html  repeatmasker.html  trf.html
_modules/ensembl/tools/anno/simple_feature_annotation/: cpg.html  eponine.html
_modules/ensembl/tools/anno/snc_rna_annotation/: cmsearch.html  trnascan.html
_modules/ensembl/tools/anno/transcriptomic_annotation/: minimap.html  scallop.html  star.html  stringtie.html
_sources/: cpg.rst.txt  dust.rst.txt  genblast.rst.txt  minimap.rst.txt  trf.rst.txt  trnascan.rst.txt
_static/: agogo.css
conf/: LoggerConfig.pm  config.json  logging.conf
docs/source/: cmsearch.rst  conf.py  cpc2.rst  diamond.rst  eponine.rst  finalise_geneset.rst  index.rst  install.rst  license.rst  load_into_core.rst  rnasamba.rst  trnascan.rst
doctrees/: cmsearch.doctree  cpg.doctree  dust.doctree  environment.pickle  eponine.doctree  index.doctree  install.doctree  license.doctree  red.doctree  repeatmasker.doctree  scallop.doctree  stringtie.doctree  trf.doctree  trnascan.doctree
ensembl_anno/: ensembl_anno.py  repeatmasking_utils.py
html/: output.json  output.txt
pipelines/: note
src/perl/ensembl/tools/anno/support_scripts_perl/: Utils.pm  clean_geneset_rf.pl  clean_utrs_and_lncRNAs_rf.pl  finalise_geneset_rf.pl  gtf_to_seq_ref.pl  load_gtf_ensembl_rf.pl  quick_rename.pl  reheader_orthodb.pl  select_best_transcriptsREFACTORING.pl  select_best_transcripts_rf.pl
src/python/: tracking.py
src/python/ensembl/api/core/: Analysis.py  Assembly.py  Biotype.py  Exon.py  Feature.py  Sequence.py  Slice.py  Transcript.py  Translation.py  __init__.py
src/python/ensembl/tools/anno/: _utils.py
src/python/ensembl/tools/anno/finalise_genset/: cpc2.py  diamond.py  finalise_geneset.py  finalise_geneset_utils.py  note  rnasamba.py  validation.py
src/python/ensembl/tools/anno/protein_annotation/: genblast.py  miniprot.py  protein_utils.py
src/python/ensembl/tools/anno/protein_evidence/: protein_utils.py
src/python/ensembl/tools/anno/repeat_annotation/: dust.py  red.py  repeatmasker.py  trf.py
src/python/ensembl/tools/anno/repeatmasking/: repeatmasking_utils.py
src/python/ensembl/tools/anno/repeats/: dust.py  red.py  repeatmasker.py  trf.py
src/python/ensembl/tools/anno/simple_feature/: cpg.py
src/python/ensembl/tools/anno/simple_feature_annotation/: cpg.py  eponine.py
src/python/ensembl/tools/anno/snc_rna/: cmsearch.py  snc_rna_utils.py  trnascan.py
src/python/ensembl/tools/anno/snc_rna_annotation/: cmsearch.py  note_rfam  trnascan.py
support_scripts/: download_orthodb_proteinset.sh  subsample_fastq.py
support_scripts/gmb/: KNOWN_ISSUES.md  README.md  annotate_cds_utrs.py  c_albicans  c_auris  check_lengths.py  compare_annotations.py  config.py  debug_scoring.py  dedup_genes.py  evidence_filter.py  fasta_export.py  fasta_qc.py  gen_extra_plots.py  gene_model_builder.py  gff3_validate.py  make_fixed_prot.py  protein_validation.py  pyproject.toml  remap_helixer.py  reporting.py  requirements.txt  retranslate_from_gff3.py  scoring.py  subset_utils.py  swissprot.dmnd  test_clustering.py  uniprot_sprot.fasta  validate_annotation.py  visualize_disagreements.py  z_tritici
support_scripts/gmb/configs/: fungi_default.yaml
support_scripts/gmb/exploratory/: debug_scoring.py  gen_extra_plots.py  test_clustering.py
support_scripts/gmb/gmb/: __init__.py
support_scripts/gmb/gmb/cli/: build.py  compare.py  visualize.py
support_scripts/gmb/gmb/compare/: compare_annotations.py  visualize_disagreements.py
support_scripts/gmb/gmb/pipeline/: annotate_cds_utrs.py  builder.py  config.py  dedup_genes.py  evidence_filter.py  fasta_export.py  fasta_qc.py  gff3_validate.py  protein_validation.py  reporting.py  scoring.py
support_scripts/gmb/gmb/utils/: fasta.py  gff.py  intervals.py  io.py  logging.py
support_scripts/gmb/scripts/: compare_annotations.py  gene_model_builder.py  visualize_disagreements.py
support_scripts/gmb/tests/: conftest.py  create_fixtures.sh  generate_golden_fixtures.py  test_annotate_cds_utrs.py  test_cluster.py  test_compare_annotations.py  test_config.py  test_drift_prevention.py  test_evidence_filter.py  test_evidence_parent_mapping.py  test_fasta_export.py  test_fasta_qc.py  test_fungi_default_equivalence.py  test_integration.py  test_protein_exclusion.py  test_protein_validation.py  test_pyranges_compat.py  test_scoring.py  test_subset_utils.py  test_transcript_splitting.py  test_z_tritici_subset.py
support_scripts/gmb/tests/fixtures/: test_no_pv.yaml
support_scripts/gmb/tests/fixtures/expected/: consensus_region1.gff3
support_scripts/gmb/tests/fixtures/z_tritici_region1/: GCF_000219625.1_MYCGR_v2.0_assembly_report.txt  genome.fa  helixer_remapped.gff3  scallop_geneset.gtf  stringtie_geneset.gtf  uniprot_geneset.gtf
support_scripts/gmb/tools/: make_fixed_prot.py  remap_helixer.py  retranslate_from_gff3.py
support_scripts_perl/: finalise_geneset.pl  load_gtf_ensembl.pl  remove_dup_seqs.pl  select_best_transcripts.pl
tests/: test_dust.py  test_red.py
workflows/: repeats.nf
(+8 files in other folders)
