[tool.poetry]
name = "ensembl-anno"
version = "0.1.0"
description = "Toolkit for annotation"
authors = ["Ensembl at EMBL-EBI <dev@ensembl.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
